Update build in pom